Added rudimentary Connection manager